# switchcost

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
backend/: config.py  main.py
backend/api/: routes.py  websocket.py
backend/core/: baseline.py  comparator.py  decomposer.py  metrics.py  planner.py  replay.py  savings.py
backend/models/: schemas.py
backend/services/: provider.py  tavily_search.py
docs/: API.md  ARCHITECTURE.md  SETUP.md  TASKS.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Architecture.jsx  AudioPlayer.jsx  CostChart.jsx  FutureTaskCoverage.jsx  MigrationPlan.jsx  QualityMatrix.jsx  QualityReport.jsx  RequiredTooling.jsx  SavingsPanel.jsx  StepTimeline.jsx  TaskInput.jsx
frontend/src/data/: demo.js
frontend/src/hooks/: useWebSocket.js
frontend/src/utils/: api.js
scripts/: setup.sh
